Added home button and more stripe animations

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,7 +11,7 @@
     <div id="stripes">
       <div id="orange"></div>
       <div id="green"></div>
-      <div id="red"></div>
+      <div id="red"><h6 onclick="javascript:transitionToPage('')" id="home-button">Home</h6></div>
     </div>
   </body>
   <script
@@ -22,5 +22,5 @@
   src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
   integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
   crossorigin="anonymous"></script>
-  <script src="javascripts/main.js"></script>
+  <script src="../javascripts/main.js"></script>
 </html>
