--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -44,6 +44,19 @@ body {
     border-color: $red;
     background-color: $red;
     border-bottom: $stripe-height solid $dark-red;
+
+    #home-button {
+      cursor: pointer;
+      opacity: 0;
+      color: white;
+      position: fixed;
+      left: 46%;
+      font-size: 30px;
+      -webkit-margin-before: 0em;
+      -webkit-margin-after: 10px;
+      -webkit-margin-start: 0px;
+      -webkit-margin-end: 0px;
+    }
   }
 }
 
