--- a/views/music.hbs
+++ b/views/music.hbs
@@ -1,29 +1,14 @@
 <div id="music" class="main">
     <h2>Music</h2>
-<!--     <a href="https://7-11jesus.bandcamp.com/releases">Bandcamp</a> -->
-    <div class="song-card grow rotate-right">
-        <a href="/music/Dododahdah.m4a"> <h3>Do do Dah dah</h3> </a>
-    </div>
-
-    <!-- <div class="song-card grow rotate-left">
-        <a href="/music/Room.m4a"> <h3>Room</h3> </a>
-    </div> -->
-
-    <div class="song-card grow rotate-right">
-        <a href="/music/Vegan cigarette.m4a"> <h3>Vegan Cigarette</h3> </a>
-    </div>
-
-    <div class="song-card grow rotate-left">
-        <a href="/music/God.m4a"> <h3>God</h3> </a>
-    </div>
-
-    <div class="song-card grow rotate-right">
-        <a href="/music/Trash.m4a"> <h3>Trash</h3> </a>
-    </div>
-
-    <div class="song-card grow rotate-left">
-        <a href="/music/Dan.m4a"> <h3>Dan</h3> </a>
-    </div> 
+    <div class="card">
+        <a href="https://7-11jesus.bandcamp.com/releases">Our music can be found on Bandcamp</a>
+        <br>
+        <br>        
+        <h3>Discography</h3>
+        <div class="album">
+            <a href="https://7-11jesus.bandcamp.com/album/oh-no"><img src="/images/Oh No Cover.jpg" alt="Oh No"></a>
+        </div>        
+    </div>    
 </div>
 
 <link rel='stylesheet' href='/stylesheets/music-tour-who.css' />
