--- a/public/stylesheets/music-tour-who.scss
+++ b/public/stylesheets/music-tour-who.scss
@@ -14,6 +14,14 @@ a {
     h2 {
         @include stroke-and-shadow($stroke-width, $red, $dark-red);
     }
+
+    a {
+        color: darken($light-blue, 50%) !important;
+    }
+
+    img {    
+        width: 20%;
+    }
 }
 
 #tour {
@@ -25,42 +33,5 @@ a {
 #who {
     h2 {
         @include stroke-and-shadow($stroke-width, $orange, $dark-orange);
-    }
-}
-
-/* Card to display songs */
-.song-card {
-    
-    background-color: white;
-
-    -webkit-box-shadow: 10px 9px 0px -4px rgba(0,0,0,0.05);
-    -moz-box-shadow: 10px 9px 0px -4px rgba(0,0,0,0.05);
-    box-shadow: 10px 9px 0px -4px rgba(0,0,0,0.05);
-
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 10px;
-    padding: 15px;    
-    width: 30%;
-
-    h3 {
-        font-size: 35px;
-        color: white;
-        @include stroke-and-shadow($stroke-width, $orange, $dark-orange);
-    }
-
-    @media screen and (max-width: $screen-small) {
-
-      width: auto;
-      margin-left: 5px;
-      margin-right: 5px;
-
-      h3, h4 {
-        font-size: 35px;
-      }
-
-      p {
-          font-size: 18px !important;
-      }
     }
 }
