--- a/views/who.hbs
+++ b/views/who.hbs
@@ -1,6 +1,10 @@
 <div class="main" id="who">
     <h2>Who is 7-11 Jesus?</h2>
-    <p>7-11 Jesus is a Slushee-rock band based out of San Francisco. Want to know more? Visit our <a href="https://www.facebook.com/711jesus/">facebook</a> page.</p>
+
+    <div class="card">
+        <img style="width:25%" src="/images/Band photo.jpg" alt="The gang">
+        <p>7-11 Jesus is a Slushee-rock band based out of San Francisco. Want to know more? Visit our <a href="https://www.facebook.com/711jesus/">facebook</a> page.</p>
+    </div>    
 </div>
 
 <link rel='stylesheet' href='/stylesheets/music-tour-who.css' />
