--- a/views/blog.hbs
+++ b/views/blog.hbs
@@ -4,7 +4,7 @@
 
     <div>
         {{#each posts}}
-        <div id={{id}} class="card">
+        <div id={{id}} class="card left-text">
             <h3>{{title}}</h3>
             <img width="95%" src={{image}}></img>
             <br>
