Fixed blog hbs error

--- a/views/blog.hbs
+++ b/views/blog.hbs
@@ -13,7 +13,7 @@
             {{#each sections}}
             <div>
                 <h4>{{title}}</h4>
-                {{{breaklines html}}}
+                {{{html}}}
                 <p>{{breaklines body}}</p>                
             </div>
             {{/each}}
