Updated secret page for error handling

--- a/views/secret.hbs
+++ b/views/secret.hbs
@@ -2,9 +2,9 @@
     <h2>Secrets of 7-11 Jesus</h2>
     <p id="code">{{code}}</p>
     <div id="treasure-display" class="card">
-        <h3>Because you have high-priest level knowledge of 7-11 Jesus scripture, here is some treasure of 7-11 Jesus</h3>
+        <h3>Because you have high-priest level knowledge of 7-11 Jesus scripture, here is some 7-11 Jesus treasure</h3>
         <img id="image" src="" alt="">
-        <div id="message"></div>
+        <p id="message"></p>
     </div>
     <div class="card">
         <p>Hello traveler, I see you have found your way to this secret page on 711Jesus.faith. You may be wondering,
@@ -45,10 +45,13 @@
             </select>
             , to Keep it for the Bois</p>
         <!-- Thou shalt not look at our source code -->
-        <button id="submit-btn">submit mf</button>
+        <div id="submit-error"></div>
+        <button id="submit-btn">submit mf</button>        
     </div>    
 </div>
 
+{{!-- TODO Move css (translate into sass) and js into their own files --}}
+{{!-- Buuut this is a page 3 people in total may see so it doesn't really matter --}}
 <script>
 
 var code = $('#code').text();
@@ -64,14 +67,17 @@ $('#submit-btn').click(function() {
     
     var url = "/secret/" + code + "/puzzle/" + puzzle_num;
 
+    $('#submit-error').text("");
+
     $.post(url, data, function (res) {
         if (res.success) {
             // Request treasure
             url = "/secret/" + code + "/treasure";
-            $.get(url, function(res) {
-                console.log(res.treasure);
+            $.get(url, function(res) {                
                 show_treasure(res.treasure);
             });
+        } else {
+            $('#submit-error').text(res.message);
         }
     });
 });
@@ -84,7 +90,7 @@ function show_treasure (treasure) {
 
     $('#treasure-display').animate({
         width: '80%',
-        height: '140%',
+        height: '200%',
     }, { duration: 'slow', easing: 'easeInOutBack' });
 }
 
@@ -106,6 +112,24 @@ h2 {
     left: 50%;
     transform: translateX(-50%);
     z-index: 10;
+}
+
+#submit-btn {
+    background-color: #FF9920;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-family: "Comic Sans MS", sans-serif;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+#submit-error {
+    margin: 25px; 
+    color: red;
 }
 
 #code {
