--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,12 +10,31 @@
           <div class="card-album album" id={{id}} onclick="location.href='www.animaltestingrecords.co/albums/{{id}}';">
             <div class="album-art">
               <img class="album-art-image" src="{{image_src}}">
+              <img class="hidden-image" src="images/animals/monkey.png">
+              <style>
+              .hidden-image {
+                height: 55%;
+                z-index: -1;
+                position: absolute;
+                transition: .5s ease;
+              }
+
+              </style>
+              <p>{{{pick_random_animal_position}}}</p>
             </div>
             <p class="artist-name">{{../name}}</p>
             <p class="album-name">{{name}}</p>
           </div>
         {{/each}}
       {{/each}}
+      <!-- Padding album so that there is an even number of albums -->
+      <div class="card-album album" style="cursor: default; opacity: 0;" id="blank-boi">
+        <div class="album-art">
+          <img class="album-art-image" src="">
+        </div>
+        <p class="artist-name"></p>
+        <p class="album-name"></p>
+      </div>
   </div>
 
 </div>
