--- a/public/stylesheets/artists.scss
+++ b/public/stylesheets/artists.scss
@@ -31,7 +31,7 @@
 
       height: 170px;
       width: 245px;
-      margin-bottom: 10px;
+      margin-bottom: 5px;
 
       .artist-image:hover {
         transform: scale(1.05);
@@ -56,11 +56,13 @@
         font-family: 'Oswald', sans-serif;
         padding: 5px;
         padding-left: 15px;
-        background-color: #ef3f3f;
+        // background-color: #ef3f3f;
+        background-color: #528ff2;
         text-transform: uppercase;
         color: white;
         font-size: 1.1em;
         font-weight: bold;
+        margin-bottom: 2px;
       }
       .location {
         display: inline;
