--- a/views/artists.hbs
+++ b/views/artists.hbs
@@ -5,7 +5,7 @@
   <div class="artists">
     {{#each artists}}
       <div class="artist" id={{id}} onclick="location.href='www.animaltestingrecords.co/albums/{{id}}';">
-        <div class="artist-image-wrapper">
+        <div class="artist-image-wrapper">          
           <img class="artist-image" src="{{images.[0]}}">
         </div>
         <div class="info">
@@ -14,6 +14,16 @@
         </div>
       </div>
     {{/each}}
+    <!-- Padding album so that there is an even number of albums -->
+    <div class="artist" style="cursor: default; opacity: 0;" id="blank-boi">
+      <div class="artist-image-wrapper">
+        <img class="artist-image" src="">
+      </div>
+      <div class="info">
+        <p class="name"></p>
+        <p class="location"></p>
+      </div>
+    </div>
   </div>
 </div>
 
