--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,6 +14,8 @@
     src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
     integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
     crossorigin="anonymous"></script>
+    <script src="/javascripts/handlebars.js"></script>
+    <script src="/javascripts/handlebar-helpers.js"></script>
   </head>
   <body>
     <div class="header">
@@ -39,5 +41,5 @@
 
     </footer>
   </body>
-  <script src="../javascripts/main.js"></script>
+  <script src="/javascripts/main.js"></script>
 </html>
