--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -160,6 +160,7 @@ a:visited { color: inherit;        }
   margin-bottom: 15px;
   padding-left: 0;
   padding-right: 0;
+  text-transform: uppercase;
 
   h2 {
     border: 2px solid rgba(0,0,0,0.05);
