--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -25,12 +25,12 @@
       <ul class="navigation">
         <div id="artists" class="header-link">
           <a href="/artists"><h3>ARTISTS</h3></a>
-          <img src="images/animals/snek.png"></img>
+          <img src="/images/animals/snek.png"></img>
         </div>
         <!-- <a href="/blog"><h3 id="">Blog</h3></a> -->
         <div id="contact" class="header-link">
           <a href="/contact"><h3>CONTACT</h3></a>
-          <img src="images/animals/monkey.png"></img>
+          <img src="/images/animals/monkey.png"></img>
         </div>
       </ul>
     </div>
@@ -38,7 +38,16 @@
       {{{body}}}
     </div>
     <footer class="footer">
-
+      <div class="logo">
+        <img id="footer-logo" src="/images/logo-color.png"></img>
+        <p>Copyright © 2018 Animal Testing Records. All rights reserved.</p>
+      </div>
+      <div class="links">
+        <ul>
+          <li><a href="/artists"><h3>ARTISTS</h3></a></li>
+          <li><a href="/contact"><h3>CONTACT</h3></a></li>
+        </ul>        
+      </div>
     </footer>
   </body>
   <script src="/javascripts/main.js"></script>
