--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,6 +3,14 @@
 <html>
   <head>
     <title>{{title}}</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/site/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/site/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/site/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/site/site.webmanifest">
+    <link rel="mask-icon" href="/site/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Jacques+Francois" rel="stylesheet">
     <link rel='stylesheet' href='/stylesheets/style.css' />
@@ -39,14 +47,14 @@
     </div>
     <footer class="footer">
       <div class="logo">
-        <img id="footer-logo" src="/images/logo-color.png"></img>
+        <img id="footer-logo" src="/images/logo/logo-color-blackground.png"></img>
         <p>Copyright © 2018 Animal Testing Records. All rights reserved.</p>
       </div>
       <div class="links">
         <ul>
           <li><a href="/artists"><h3>ARTISTS</h3></a></li>
           <li><a href="/contact"><h3>CONTACT</h3></a></li>
-        </ul>        
+        </ul>
       </div>
     </footer>
   </body>
