--- a/public/stylesheets/music.scss
+++ b/public/stylesheets/music.scss
@@ -49,6 +49,7 @@
       float: left;
 
       .album-art-image {
+        position: relative;
         z-index: 10;
         width: 245px;
         height: 245px;
@@ -64,11 +65,11 @@
       }
       .hidden-image {
         height: 55%;
-        z-index: -1;
+        z-index: 1;
         position: absolute;
         transition: .5s ease;
         top: 10%;
-        right: 10%;
+        right: 15%;
       }
       &:hover .hidden-image {
         transform: rotate(40deg);
