--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no" />
 <html>
   <head>
     <title>{{title}}</title>
@@ -30,6 +30,9 @@
       <ul id="headmast">
         <h1><a href="/">ANIMAL TESTING RECORDS</a></h1>
       </ul>
+      <button id="mobile-button" onclick="toggle_mobile_menu()">
+        <img id="mobile-logo" src="/images/logo/atr_logo_circle.png"></img>
+      </button>
       <ul class="navigation">
         <div id="artists" class="header-link">
           <a href="/artists"><h3>ARTISTS</h3></a>
@@ -46,15 +49,15 @@
       {{{body}}}
     </div>
     <footer class="footer">
-      <div class="logo">
-        <img id="footer-logo" src="/images/logo/logo-color-blackground.png"></img>
-        <p>Copyright © 2018 Animal Testing Records. All rights reserved.</p>
-      </div>
       <div class="links">
         <ul>
           <li><a href="/artists"><h3>ARTISTS</h3></a></li>
           <li><a href="/contact"><h3>CONTACT</h3></a></li>
         </ul>
+      </div>
+      <div class="logo">
+        <img id="footer-logo" src="/images/logo/logo-color-blackground.png"></img>
+        <p>Copyright © 2018 Animal Testing Records. All rights reserved.</p>
       </div>
     </footer>
   </body>
