More mobile fixes

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -74,6 +74,8 @@ a:visited { color: inherit;        }
 
   #mobile-button {
 
+    margin-right: 10px;
+
     #mobile-logo {
       height: 50px;
     }
