--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -30,9 +30,9 @@
       <ul id="headmast">
         <h1><a href="/">ANIMAL TESTING RECORDS</a></h1>
       </ul>
-      <button id="mobile-button" onclick="toggle_mobile_menu()">
+      <div id="mobile-button" onclick="toggle_mobile_menu()">
         <img id="mobile-logo" src="/images/logo/atr_logo_circle.png"></img>
-      </button>
+      </div>
       <ul class="navigation">
         <div id="artists" class="header-link">
           <a href="/artists"><h3>ARTISTS</h3></a>
